<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".view.post.CreatePostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:backgroundTint="@color/white"
                android:theme="?attr/actionBarTheme"

                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arefruqaa"
                android:text="@string/back"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                app:icon="@drawable/ic_forward"
                app:iconTint="@color/purple_200"
                app:iconGravity="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_text_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="32dp"
        android:hint="@string/write_samthing"
        app:helperText=""
        app:helperTextTextColor="@color/error_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_text"
            android:layout_width="match_parent"
            android:layout_height="150dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"

        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_bkg"
        android:fontFamily="@font/arefruqaa"
        android:text="@string/save"
        android:textColor="@color/primary_color"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_persone"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_bkg"
        android:backgroundTint="@color/yellow_color"
        android:fontFamily="@font/arefruqaa"
        android:text="@string/cancel"
        android:textColor="@color/primary_color"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_create"
        app:layout_constraintEnd_toStartOf="@+id/btn_create"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_create"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_image_viedo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/image_video"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:icon="@drawable/ic_photo"
        app:iconGravity="end"
        app:iconTint="@color/green_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_text_label"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_place"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="مدينة"
        android:textColor="@color/black"

        android:textSize="15sp"
        app:icon="@drawable/ic_places"
        app:iconGravity="end"
        app:iconTint="#FFD365"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image_viedo"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_persone"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"

        android:text="شخص"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:icon="@drawable/ic_person"

        app:iconGravity="end"
        app:iconTint="#6B4F4F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_place"
        tools:ignore="RtlHardcoded" />


</androidx.constraintlayout.widget.ConstraintLayout>